# elenore-engine

./: CMakeLists.txt  License.md  README.md
.old/include/: mesh.hpp  scene.hpp  shader.hpp
.old/source/: input.cpp  mesh.cpp  shader.cpp  text.cpp
assets/shaders/: fragment.glsl  vertex.glsl
include/: buffer_object.hpp  camera.hpp  engine.hpp  input.hpp  logger.hpp  mesh.hpp  object.hpp  object2d.hpp  object3d.hpp  shader.hpp  text.hpp  window.hpp
include/elenore/: buffer_object.hpp  camera3d.hpp  elenore.hpp  entity.hpp  entity3d.hpp  log.hpp  logger.hpp  mesh.hpp  mesh3d.hpp  object3d.hpp  shader.hpp  text.hpp  tools.hpp  window.hpp
include/elenore/core/: buffer_object.hpp  camera3d.hpp  entity.hpp  mesh3d.hpp  object3d.hpp  scene.hpp  scene3d.hpp  tools.hpp  window.hpp
include/elenore/ui/: widget.hpp
source/: buffer_object.cpp  camera.cpp  engine.cpp  log.cpp  logger.cpp  main.cpp  mesh.cpp  object.cpp  object2d.cpp  object3d.cpp  shader.cpp  text.cpp  window.cpp
source/elenore/: buffer_object.cpp  camera3d.cpp  entity.cpp  entity3d.cpp  log.cpp  logger.cpp  mesh.cpp  mesh3d.cpp  object3d.cpp  shader.cpp  text.cpp  tools.cpp  window.cpp
source/elenore/core/: buffer_object.cpp  camera3d.cpp  entity.cpp  log.cpp  mesh3d.cpp  object3d.cpp  scene3d.cpp  shader.cpp  tools.cpp  window.cpp
source/elenore/ui/: button.cpp  widget.cpp
tests/: CMakeLists.txt  camera.cpp  star_test.cpp  triangle_test.cpp  window.cpp
